--- a/ecommerce/templates/store/main.html
+++ b/ecommerce/templates/store/main.html
@@ -26,7 +26,7 @@
             return cookieValue;
         }
 
-        const csrftoken = getToken('csrftoken');
+        let csrftoken = getToken('csrftoken');
     </script>
 
     <title>Ecom</title>
